# NexusBVH

./: .gitignore  CMakeLists.txt  LICENSE  README.md
NexusBVH/: CMakeLists.txt
NexusBVH/include/NXB/: AABB.h  BVH.h  BVHBuildMetrics.h  BVHBuilder.h  BuildConfig.h  Triangle.h
NexusBVH/include/NXB/Math/: CudaMath.h
NexusBVH/src/: BVHBuilder.cpp  BVHBuilder.h
NexusBVH/src/BVH/: BVH.h
NexusBVH/src/Cuda/: BinaryBuilder.cu  BinaryBuilder.h  BuildState.h  BuilderUtils.h  CudaUtils.h  Eval.cu  Eval.h  Setup.cu  Setup.h  WideConverter.cu  WideConverter.h
NexusBVH/src/Math/: AABB.h  Math.h
Test/: CMakeLists.txt
Test/src/: CudaUtils.h  Main.cpp
src/: BVHBuilder.cpp  BVHBuilder.h
src/BVH/: BVH.h
src/Cuda/: BinaryBuilder.cu  BinaryBuilder.h  BuildState.h  BuilderUtils.h  Setup.cu  Setup.h
src/Math/: AABB.h  Triangle.h
